--- a/Bakeries.html
+++ b/Bakeries.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Contact us</title>
+<title>Products - Bakeries</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <!--for social media icon-->
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
-    <div class="wrapper contact">
+    <div class="wrapper bakeries">
         <!--Header-->
         <header class="topHeader">
 
@@ -56,48 +56,69 @@
         <!--start Main content-->
         <main class="mainContent">
             <div class="container">
-                <img class="cafeHeadImg" src="pics/ContactUs/contact_fixed.jpg" alt="sött och elegant, cafe">
+                <img class="cafeHeadImg" src="pics/Products/products_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
-                    <h2>CONTACT US</h2>
+                    <h2>BAKERIES</h2>
                 </div>
             </div>
 
-            <!--content MAP-->
+            <!-- First Content -->
             <div class="contentWrapper">
                 <section id="firstContent">
-                    <h2>Contact</h2>
+                    <h2>Sött och Elegant Bakeries</h2>
                     <span class="border"></span>
-                    <h4><strong>TEL:</strong></h4>
-                    <p>+4873 123 4567</p>
-                    <h4><strong>EMAIL:</strong></h4>
-                    <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
                 </section>
 
+                <!-- Second Content -->
+
                 <section id="secondContent" class="center">
-                    <div class="formWrapper">
-                        <h2>HAVE ANOTHER QUERY?</h2>
-                        <fieldset id="form">
-                            <div class="formClass">
-                                <label>
-                                Name:<br>
-                                <input type="text" name="name" placeholder="Your First Name"><br>
-                            </label>
-                                <label>
-                                Lastname:<br>
-                                <input type="text" name="lastname"  placeholder="Your Last Name"><br>
-                            </label>
-                                <label>
-                                Email:<br>
-                                <input type="text" name="email"  placeholder="Your Email"><br>
-                            </label>
-                                <label for="meddelande">
-                                Message:<br>
-                                <textarea rows="8" cols="40" id="meddelande" placeholder="Your Message"></textarea><br>
-                            </label>
-                                <input type="submit" value="Submit" id="bottom">
-                            </div>
-                        </fieldset>
+                    <div class="bakeRow">
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
                     </div>
+
+                    <div class="bakeRow">
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery6_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery7_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                        <div class="bakery">
+                            <figure><img src="pics/Products/Bakeries/bakery8_fixed.jpg">
+                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                            </figure>
+                        </div>
+                    </div>
+
+
                 </section>
             </div>
         </main>
