--- a/Location.html
+++ b/Location.html
@@ -30,8 +30,8 @@
                         <a href="#">PRODUCTS</a>
                         <input type="checkbox" id="drop-1">
                         <ul>
-                            <li><a href="#">Bakeries</a></li>
-                            <li><a href="#">Sanwiches</a></li>
+                            <li><a href="Bakeries.html">Bakeries</a></li>
+                            <li><a href="#">Sandwiches</a></li>
                             <li><a href="#">Cakes</a></li>
                             <li><a href="#">Cookies & Snack</a></li>
                         </ul>
