--- a/Bakeries.html
+++ b/Bakeries.html
@@ -75,22 +75,34 @@
                     <div class="bakeRow">
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do magna aliqua.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                     </div>
@@ -98,22 +110,34 @@
                     <div class="bakeRow">
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et magna aliqua.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery6_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery7_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery8_fixed.jpg">
-                                <figcaption>Bakery<br><i>papapapapap</i></figcaption>
+                                <figcaption>Bakery<br>
+                                    <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                .</em></h6>
+                                </figcaption>
                             </figure>
                         </div>
                     </div>
