--- a/Sandwiches.html
+++ b/Sandwiches.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Products - Bakeries</title>
+<title>Products - Sandwiches</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <!--for social media icon-->
@@ -58,14 +58,14 @@
             <div class="container">
                 <img class="cafeHeadImg" src="pics/Products/products_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
-                    <h2>BAKERIES</h2>
+                    <h2>SANDWICHES</h2>
                 </div>
             </div>
 
             <!-- First Content -->
             <div class="contentWrapper">
                 <section id="firstContent">
-                    <h2>Sött och Elegant Bakeries</h2>
+                    <h2>Sött och Elegant Sandwiches</h2>
                     <span class="border"></span>
                 </section>
 
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich2_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich3_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich4_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
 
-                    <div class="bakeRow">
+                    <!-- <div class="bakeRow">
                         <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg">
                                 <figcaption>Bakery<br>
@@ -140,7 +140,7 @@
                                 </figcaption>
                             </figure>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
             </div>
         </main>
