--- a/Location.html
+++ b/Location.html
@@ -31,7 +31,7 @@
                         <input type="checkbox" id="drop-1">
                         <ul>
                             <li><a href="Bakeries.html">Bakeries</a></li>
-                            <li><a href="#">Sandwiches</a></li>
+                            <li><a href="Sandwiches.html">Sandwiches</a></li>
                             <li><a href="#">Cakes</a></li>
                             <li><a href="#">Cookies & Snack</a></li>
                         </ul>
