--- a/Cakes.html
+++ b/Cakes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Products - Bakeries</title>
+<title>Products - Cakes</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <!--for social media icon-->
@@ -58,14 +58,14 @@
             <div class="container">
                 <img class="cafeHeadImg" src="pics/Products/products_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
-                    <h2>BAKERIES</h2>
+                    <h2>CAKES</h2>
                 </div>
             </div>
 
             <!-- First Content -->
             <div class="contentWrapper">
                 <section id="firstContent">
-                    <h2>Sött och Elegant Bakeries</h2>
+                    <h2>Sött och Elegant Cakes</h2>
                     <span class="border"></span>
                 </section>
 
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake2_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake3_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake4_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
@@ -109,7 +109,7 @@
 
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake5_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et magna aliqua.</em></h6>
@@ -117,7 +117,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery6_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake6_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut.</em></h6>
@@ -125,21 +125,21 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery7_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake7_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
                                 </figcaption>
                             </figure>
                         </div>
-                        <div class="bakery">
+                        <!-- <div class="bakery">
                             <figure><img src="pics/Products/Bakeries/bakery8_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                 .</em></h6>
                                 </figcaption>
                             </figure>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
             </div>
