--- a/Sandwiches.html
+++ b/Sandwiches.html
@@ -32,7 +32,7 @@
                         <ul>
                             <li><a href="Bakeries.html">Bakeries</a></li>
                             <li><a href="Sandwiches.html">Sandwiches</a></li>
-                            <li><a href="#">Cakes</a></li>
+                            <li><a href="Cakes.html">Cakes</a></li>
                             <li><a href="#">Cookies & Snack</a></li>
                         </ul>
                     </li>
