Fixed snacks page

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -33,7 +33,7 @@
                             <li><a href="Bakeries.html">Bakeries</a></li>
                             <li><a href="Sandwiches.html">Sandwiches</a></li>
                             <li><a href="Cakes.html">Cakes</a></li>
-                            <li><a href="#">Cookies & Snack</a></li>
+                            <li><a href="Snacks.html">Cookies & Snacks</a></li>
                         </ul>
                     </li>
                     <li>
