--- a/Snacks.html
+++ b/Snacks.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Products - Bakeries</title>
+<title>Products - Cookies and Snacks</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <!--for social media icon-->
@@ -58,14 +58,14 @@
             <div class="container">
                 <img class="cafeHeadImg" src="pics/Products/products_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
-                    <h2>BAKERIES</h2>
+                    <h2>COOKIES & SNACKS</h2>
                 </div>
             </div>
 
             <!-- First Content -->
             <div class="contentWrapper">
                 <section id="firstContent">
-                    <h2>Sött och Elegant Bakeries</h2>
+                    <h2>Sött och Elegant Cookies & Snacks</h2>
                     <span class="border"></span>
                 </section>
 
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack2_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack3_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack4_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
@@ -107,9 +107,9 @@
                         </div>
                     </div>
 
-                    <div class="bakeRow">
+                    <!-- <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake5_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et magna aliqua.</em></h6>
@@ -117,7 +117,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery6_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake6_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut.</em></h6>
@@ -125,7 +125,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery7_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake7_fixed.jpg">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -139,37 +139,37 @@
                                 .</em></h6>
                                 </figcaption>
                             </figure>
-                        </div>
-                    </div>
-                </section>
+                        </div> -->
             </div>
-        </main>
+            </section>
+    </div>
+    </main>
 
 
-        <!--Footer-->
-        <footer>
-            <section id="footerText">
-                <div class="footerContent">
-                    <h4><strong>LOCATION</strong></h4>
-                    <em>Drottningatan 20,<br>
+    <!--Footer-->
+    <footer>
+        <section id="footerText">
+            <div class="footerContent">
+                <h4><strong>LOCATION</strong></h4>
+                <em>Drottningatan 20,<br>
                         Stockholm, Sweden
                     </em>
-                </div>
-                <div class="footerContent">
-                    <h4><strong>CONTACT</strong></h4>
-                    <p>+4873 123 4567</p>
-                </div>
-                <div class="footerContent">
-                    <h4><strong>EMAIL</strong></h4>
-                    <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
-                </div>
-            </section>
-            <section id="socialmedia">
-                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-                <a href="https://www.instragram.com" class="fa fa-instagram"></a>
-                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
-            </section>
-        </footer>
+            </div>
+            <div class="footerContent">
+                <h4><strong>CONTACT</strong></h4>
+                <p>+4873 123 4567</p>
+            </div>
+            <div class="footerContent">
+                <h4><strong>EMAIL</strong></h4>
+                <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
+            </div>
+        </section>
+        <section id="socialmedia">
+            <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+            <a href="https://www.instragram.com" class="fa fa-instagram"></a>
+            <a href="https://www.twitter.com" class="fa fa-twitter"></a>
+        </section>
+    </footer>
     </div>
 </body>
 
