Put alt in the pics

--- a/Bakeries.html
+++ b/Bakeries.html
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery2_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery3_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery4_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
@@ -109,7 +109,7 @@
 
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery5_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et magna aliqua.</em></h6>
@@ -117,7 +117,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery6_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery6_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut.</em></h6>
@@ -125,7 +125,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery7_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery7_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -133,7 +133,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Bakeries/bakery8_fixed.jpg">
+                            <figure><img src="pics/Products/Bakeries/bakery8_fixed.jpg" alt="bakery">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                 .</em></h6>
