--- a/Cakes.html
+++ b/Cakes.html
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake2_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake2_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake3_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake3_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake4_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake4_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
@@ -109,7 +109,7 @@
 
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake5_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake5_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et magna aliqua.</em></h6>
@@ -117,7 +117,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake6_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake6_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut.</em></h6>
@@ -125,7 +125,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cakes/cake7_fixed.jpg">
+                            <figure><img src="pics/Products/Cakes/cake7_fixed.jpg" alt="Cake">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
