--- a/Snacks.html
+++ b/Snacks.html
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack2_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack2_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack3_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack3_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack4_fixed.jpg">
+                            <figure><img src="pics/Products/Cookies and Snacks/snack4_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
