--- a/Sandwiches.html
+++ b/Sandwiches.html
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Sandwiches/sandwich_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich_fixed.jpg" alt="Sandwich">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Sandwiches/sandwich2_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich2_fixed.jpg" alt="Sandwich">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Sandwiches/sandwich3_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich3_fixed.jpg" alt="Sandwich">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Sandwiches/sandwich4_fixed.jpg">
+                            <figure><img src="pics/Products/Sandwiches/sandwich4_fixed.jpg" alt="Sandwich">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
