--- a/Wedding.html
+++ b/Wedding.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Location</title>
+<title>Services - Wedding</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <!--for social media icon-->
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
-    <div class="wrapper location">
+    <div class="wrapper wedding">
         <!--Header-->
         <header class="topHeader">
 
@@ -56,55 +56,47 @@
         <!--start Main content-->
         <main class="mainContent">
             <div class="container">
-                <img class="cafeHeadImg" src="pics/Location/location_fixed.jpg" alt="sött och elegant, cafe">
+                <img class="cafeHeadImg" src="pics/Services/wedding_head_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
-                    <h2>LOCATION</h2>
+                    <h2>WEDDING</h2>
                 </div>
             </div>
 
-            <!--content MAP-->
+            <!-- First Content -->
             <div class="contentWrapper">
                 <section id="firstContent">
-                    <h2>Find us</h2>
+                    <h2>The Perfect Place For Your Wedding</h2>
                     <span class="border"></span>
-                    <address>Drottningatan 20,<br>
-                        Stockholm, Sweden</address>
+                    <h5>We offer a special cake and event space to your special day at Sött och Elegant.</h5>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </section>
 
+                <!-- Second Content -->
+                <!--Image content-->
                 <section id="secondContent">
-                    <a href="https://www.google.com/maps/place/Drottninggatan+20,+111+51+Stockholm,+Sweden/@59.3302632,18.062934,17z/data=!3m1!4b1!4m5!3m4!1s0x465f9d5ef954fba9:0x58f0ce8364dc291a!8m2!3d59.3302632!4d18.0651227">
-                        <img src="pics/Location/Map.PNG"></a>
-
+                    <div class="fixpics">
+                        <div class="row">
+                            <div class="column">
+                                <img src="pics/Services/wedding_fixed.jpg" alt="wedding cake">
+                                <img src="pics/Services/wedding4_fixed.jpg" alt="wedding party">
+                                <img src="pics/Services/wedding3_fixed.jpg" alt="wedding party">
+                            </div>
+                            <div class="column">
+                                <img src="pics/Services/wedding5_fixed.jpg" alt="wedding party">
+                                <img src="pics/Services/wedding6_fixed.jpg" alt="wedding party">
+                                <img src="pics/Services/wedding2_fixed.jpg" alt="wedding cake">
+                            </div>
+                            <div class="column">
+                                <img src="pics/Services/wedding9_fixed.jpg" alt="wedding cake">
+                                <img src="pics/Services/wedding8_fixed.jpg" alt="wedding cake">
+                                <img src="pics/Services/wedding7_fixed.jpg" alt="wedding party">
+                            </div>
+                        </div>
+                    </div>
                 </section>
-
-                <!-- <div id="map"></div>
-
-                <script>
-                    // Initialize and add the map
-                    function initMap() {
-                        // The location of Uluru
-                        var uluru = {
-                            lat: 59.3293,
-                            lng: 18.0686
-                        };
-                        // The map, centered at Uluru
-                        var map = new google.maps.Map(
-                            document.getElementById('map'), {
-                                zoom: 4,
-                                center: uluru
-                            });
-                        // The marker, positioned at Uluru
-                        var marker = new google.maps.Marker({
-                            position: uluru,
-                            map: map
-                        });
-                    }
-                </script>
-                <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAe0sYr6LC9Gw5KPkjHgL9QeDvlb5viaaA&callback=initMap">
-                </script> -->
 
             </div>
-
         </main>
 
 
