--- a/Sandwiches.html
+++ b/Sandwiches.html
@@ -42,7 +42,7 @@
                         <a href="#">SERVICES</a>
                         <input type="checkbox" id="drop-2">
                         <ul>
-                            <li><a href="#">Wedding</a></li>
+                            <li><a href="Wedding.html">Wedding</a></li>
                             <li><a href="#">Catering</a></li>
                         </ul>
                     </li>
