--- a/Catering.html
+++ b/Catering.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>About Us</title>
+<title>Services - Catering</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8">
 <!--for social media icon-->
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
 
 <body>
-    <div class="wrapper aboutUs">
+    <div class="wrapper wedding">
         <!--Header-->
         <header class="topHeader">
 
@@ -56,38 +56,46 @@
         <!--start Main content-->
         <main class="mainContent">
             <div class="container">
-                <img class="cafeHeadImg" src="pics/AboutMe/piqsels_fixed.jpg" alt="sött och elegant, cafe">
+                <img class="cafeHeadImg" src="pics/Services/Catering/Cat_head_fixed.jpg" alt="sött och elegant, cafe">
                 <div class="imgText">
-                    <h2>ABOUT US</h2>
+                    <h2>CATERING</h2>
                 </div>
             </div>
 
-            <!--content-->
+            <!-- First Content -->
             <div class="contentWrapper">
                 <section id="firstContent">
-                    <h2>About Sött och Elegant</h2>
+                    <h2>Need Catering For Your Party?</h2>
                     <span class="border"></span>
-                    <p>Nam a libero dignissim, finibus odio eget, suscipit mi. Fusce at ornare elit, aliquam aliquet ligula. Morbi lorem enim, euismod ut ornare vel, pretium a ipsum. Mauris aliquam nunc sapien, in convallis enim luctus nec. Maecenas convallis
-                        enim in nisl aliquam, sit amet iaculis dolor imperdiet. Praesent varius ligula nec dignissim dignissim. Nulla facilisi. Integer porta lacinia pharetra. Suspendisse eu eleifend eros. Integer consectetur ex id pulvinar tincidunt.
-                        Morbi imperdiet risus at consequat dignissim. Aenean nec malesuada metus, in lobortis mauris. Aenean elementum placerat quam, sed pulvinar mi scelerisque quis. </p>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </section>
 
+                <!-- Second Content -->
                 <!--Image content-->
                 <section id="secondContent">
                     <div class="fixpics">
                         <div class="row">
                             <div class="column">
-                                <img src="pics/AboutMe/person4_fixed.jpg" alt="cafe picture">
-                                <img src="pics/AboutMe/person2_fixed.jpg" alt="cafe picture">
+                                <img src="pics/Services/Catering/catering_fixed.jpg" alt="catering">
+                                <img src="pics/Services/Catering/catering2_fixed.jpg" alt="catering">
+                                <img src="pics/Services/Catering/catering3_fixed.jpg" alt="catering">
                             </div>
                             <div class="column">
-                                <img src="pics/AboutMe/person5_fixed.jpg" alt="cafe picture">
-                                <img src="pics/AboutMe/person_fixed.jpg" alt="cafe picture">
-                                <img src="pics/AboutMe/person3_fixed.jpg" alt="cafe picture">
+                                <img src="pics/Services/Catering/catering4_fixed.jpg" alt="catering">
+                                <img src="pics/Services/Catering/catering5_fixed.jpg" alt="catering">
+                                <img src="pics/Services/Catering/catering6_fixed.jpg" alt="catering">
+                            </div>
+                            <div class="column">
+                                <img src="pics/Services/Catering/catering7_fixed.jpg" alt="catering">
+                                <img src="pics/Services/Catering/catering8_fixed.jpg" alt="catering">
+                                <img src="pics/Services/Catering/catering9_fixed.jpg" alt="catering">
                             </div>
                         </div>
                     </div>
                 </section>
+
             </div>
         </main>
 
