--- a/Cakes.html
+++ b/Cakes.html
@@ -43,7 +43,7 @@
                         <input type="checkbox" id="drop-2">
                         <ul>
                             <li><a href="Wedding.html">Wedding</a></li>
-                            <li><a href="#">Catering</a></li>
+                            <li><a href="Catering.html">Catering</a></li>
                         </ul>
                     </li>
                     <li><a href="Location.html">LOCATION</a></li>
