add alt in google img

--- a/Location.html
+++ b/Location.html
@@ -73,7 +73,7 @@
 
                 <section id="secondContent">
                     <a href="https://www.google.com/maps/place/Drottninggatan+20,+111+51+Stockholm,+Sweden/@59.3302632,18.062934,17z/data=!3m1!4b1!4m5!3m4!1s0x465f9d5ef954fba9:0x58f0ce8364dc291a!8m2!3d59.3302632!4d18.0651227">
-                        <img src="pics/Location/Map.PNG"></a>
+                        <img src="pics/Location/Map.PNG" alt="cafe location"></a>
 
                 </section>
 
