Fixed footer and snacks folder

--- a/Snacks.html
+++ b/Snacks.html
@@ -74,7 +74,7 @@
                 <section id="secondContent" class="center">
                     <div class="bakeRow">
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack_fixed.jpg" alt="Cookies and Snacks">
+                            <figure><img src="pics/Products/Snacks/snack_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -82,7 +82,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack2_fixed.jpg" alt="Cookies and Snacks">
+                            <figure><img src="pics/Products/Snacks/snack2_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do magna aliqua.</em></h6>
@@ -90,7 +90,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack3_fixed.jpg" alt="Cookies and Snacks">
+                            <figure><img src="pics/Products/Snacks/snack3_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</em></h6>
@@ -98,7 +98,7 @@
                             </figure>
                         </div>
                         <div class="bakery">
-                            <figure><img src="pics/Products/Cookies and Snacks/snack4_fixed.jpg" alt="Cookies and Snacks">
+                            <figure><img src="pics/Products/Snacks/snack4_fixed.jpg" alt="Cookies and Snacks">
                                 <figcaption>Bakery<br>
                                     <h6><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                     sed do eiusmod tempor labore et dolore magna aliqua.</em></h6>
@@ -140,36 +140,38 @@
                                 </figcaption>
                             </figure>
                         </div> -->
+                </section>
             </div>
-            </section>
-    </div>
-    </main>
+        </main>
 
 
-    <!--Footer-->
-    <footer>
-        <section id="footerText">
-            <div class="footerContent">
-                <h4><strong>LOCATION</strong></h4>
-                <em>Drottningatan 20,<br>
+
+
+
+        <!--Footer-->
+        <footer>
+            <section id="footerText">
+                <div class="footerContent">
+                    <h4><strong>LOCATION</strong></h4>
+                    <em>Drottningatan 20,<br>
                         Stockholm, Sweden
                     </em>
-            </div>
-            <div class="footerContent">
-                <h4><strong>CONTACT</strong></h4>
-                <p>+4873 123 4567</p>
-            </div>
-            <div class="footerContent">
-                <h4><strong>EMAIL</strong></h4>
-                <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
-            </div>
-        </section>
-        <section id="socialmedia">
-            <a href="https://www.facebook.com" class="fa fa-facebook"></a>
-            <a href="https://www.instragram.com" class="fa fa-instagram"></a>
-            <a href="https://www.twitter.com" class="fa fa-twitter"></a>
-        </section>
-    </footer>
+                </div>
+                <div class="footerContent">
+                    <h4><strong>CONTACT</strong></h4>
+                    <p>+4873 123 4567</p>
+                </div>
+                <div class="footerContent">
+                    <h4><strong>EMAIL</strong></h4>
+                    <a href="mailto:exampel@gmail.com">exampel@gmail.com</a>
+                </div>
+            </section>
+            <section id="socialmedia">
+                <a href="https://www.facebook.com" class="fa fa-facebook"></a>
+                <a href="https://www.instragram.com" class="fa fa-instagram"></a>
+                <a href="https://www.twitter.com" class="fa fa-twitter"></a>
+            </section>
+        </footer>
     </div>
 </body>
 
